--- a/deploy/ansible/roles/data/defaults/main.yml
+++ b/deploy/ansible/roles/data/defaults/main.yml
@@ -50,6 +50,7 @@ data_datasets: []
 #
 # If a special user or groups are required to access data, they can be set here, which
 # will result in the data node containers launching with the specified UID and GIDs
+#
 # By default, use the ESGF user
 data_security_context_user: "1000"
 # Due to permissions set inside the container, the user *must* belong to group 1000
@@ -73,3 +74,11 @@ fileserver_image_prefix: "{{ image_prefix }}"
 fileserver_image_tag: "{{ image_tag }}"
 fileserver_image_pull: "{{ image_pull }}"
 fileserver_image_repository: nginx
+
+# Configuration for the logstash access log exporter
+logstash_enabled: true
+# Settings for the logstash access log exporter image
+logstash_image_prefix: "{{ image_prefix }}"
+logstash_image_tag: "{{ image_tag }}"
+logstash_image_pull: "{{ image_pull }}"
+logstash_image_repository: logstash
