--- a/deploy/ansible/roles/data/tasks/main.yml
+++ b/deploy/ansible/roles/data/tasks/main.yml
@@ -19,3 +19,11 @@
 - name: Uninstall Nginx fileserver
   include: fileserver_uninstall.yml
   when: "'data' not in group_names or not fileserver_enabled"
+
+- name: Install logstash log exporter
+  include: logstash_install.yml
+  when: "'data' in group_names and logstash_enabled"
+
+- name: Uninstall logstash log exporter
+  include: logstash_uninstall.yml
+  when: "'data' not in group_names or not logstash_enabled"
