--- a/deploy/ansible/roles/index/tasks/search_install.yml
+++ b/deploy/ansible/roles/index/tasks/search_install.yml
@@ -29,4 +29,4 @@
     networks_cli_compatible: yes
     volumes: ["/esg/config/search:/esg/config:ro"]
     state: started
-    restart: yes
+    recreate: yes
