Add downstream logstash to stats pipeline + configurability

--- a/deploy/kubernetes/chart/files/logstash/10-stats.conf
+++ b/deploy/kubernetes/chart/files/logstash/10-stats.conf
@@ -1,8 +1,5 @@
-input {
-    pipe {
-        command => "cat ${ACCESS_LOG_FILE}"
-    }
-}
+{{- $statsPipeline := .Values.data.accessLogSidecar.statsPipeline -}}
+{{- if $statsPipeline.enabled }}
 filter {
     # Extract components from the access log messages
     grok {
@@ -65,7 +62,11 @@ filter {
     }
 }
 output {
-    stdout {
-        codec => rubydebug
+    lumberjack {
+        codec => json
+        hosts => ["{{ $statsPipeline.server }}"]
+        port => {{ $statsPipeline.port }}
+        ssl_certificate => "/etc/logstash/certs/lumberjack.cert"
     }
 }
+{{- end }}
