--- a/deploy/kubernetes/chart/templates/thredds/deployment.yaml
+++ b/deploy/kubernetes/chart/templates/thredds/deployment.yaml
@@ -23,7 +23,11 @@ spec:
         # If using templated catalogs, we only need to roll if the configmap changes
         checksum/configmap: {{ include (print $.Template.BasePath "/thredds/configmap.yaml") . | sha256sum }}
         {{- end }}
-        checksum/logstash-configmap: {{ include (print $.Template.BasePath "/logstash/configmap.yaml") . | sha256sum }}
+        {{- if $accessLogSidecar.enabled }}
+        # When the access log sidecar is enabled, roll the deployment if the logstash pipelines or certificates change
+        checksum/logstash-pipelines: {{ include (print $.Template.BasePath "/logstash/pipelines.yaml") . | sha256sum }}
+        checksum/logstash-certs: {{ include (print $.Template.BasePath "/logstash/certs.yaml") . | sha256sum }}
+        {{- end }}
     spec:
       {{- with (default .Values.image.pullSecrets $thredds.image.pullSecrets) }}
       imagePullSecrets: {{ toYaml . | nindent 8 }}
@@ -72,8 +76,9 @@ spec:
             - name: thredds-cache
               mountPath: /thredds/cache
         {{- end }}
-        # Create a named pipe for the access log so it can be separated
+        # If the access log sidecar is enabled, create a named pipe for the access log so it can be separated
         # Continue to send the rest of the logs to stdout
+        {{- if $accessLogSidecar.enabled }}
         - name: make-log-pipes
           {{ include "esgf.deployment.image" (list . $thredds.image) }}
           args:
@@ -96,6 +101,7 @@ spec:
           volumeMounts:
             - name: tomcat-logs
               mountPath: /thredds/logs
+        {{- end }}
         {{- with $thredds.extraInitContainers }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
@@ -137,8 +143,11 @@ spec:
               {{- end }}
             - name: thredds-cache
               mountPath: /opt/tomcat/content/thredds/cache
+            # The shared log volume is only required if the access log sidecar is enabled
+            {{- if $accessLogSidecar.enabled }}
             - name: tomcat-logs
               mountPath: /opt/tomcat/logs
+            {{- end }}
             # In order to use a read-only rootfs, we must put emptyDirs where we expect tomcat to write
             - name: tomcat-temp
               mountPath: /opt/tomcat/temp
@@ -150,7 +159,8 @@ spec:
             {{- with $thredds.extraVolumeMounts }}
             {{- toYaml . | nindent 12 }}
             {{- end }}
-        # Tail the access log separately
+        # If the access log sidecar is enabled, run the sidecar pod
+        {{- if $accessLogSidecar.enabled }}
         - name: thredds-log-localhost-access-log
           {{ include "esgf.deployment.image" (list . $accessLogSidecar.image) }}
           env:
@@ -165,12 +175,15 @@ spec:
           volumeMounts:
             - name: logstash-conf
               mountPath: /etc/logstash/conf.d
+            - name: logstash-certs
+              mountPath: /etc/logstash/certs
             - name: tomcat-logs
               mountPath: /thredds/logs
             - name: logstash-data
               mountPath: /usr/share/logstash/data
             - name: logstash-tmp
               mountPath: /tmp/logstash
+        {{- end }}
       {{- with $thredds.nodeSelector }}
       nodeSelector: {{ toYaml . | nindent 8 }}
       {{- end }}
@@ -199,9 +212,6 @@ spec:
         # Each pod gets its own THREDDS cache directory on the local disk
         - name: thredds-cache
           emptyDir: {}
-        # Each pod gets a directory to hold the named pipes for log files
-        - name: tomcat-logs
-          emptyDir: {}
         # In order to use a read-only rootfs, we must put emptyDirs where we expect tomcat to write
         - name: tomcat-temp
           emptyDir: {}
@@ -209,15 +219,25 @@ spec:
           emptyDir: {}
         - name: tmp-thredds
           emptyDir: {}
-        # Logstash config is in a configmap
+        # These volumes are only required if the access log sidecar is enabled
+        {{- if $accessLogSidecar.enabled }}
+        # Volume to hold the log pipes
+        - name: tomcat-logs
+          emptyDir: {}
+        # Logstash config is in a secret
         - name: logstash-conf
-          configMap:
-            name: {{ include "esgf.component.fullname" (list . "logstash") }}
+          secret:
+            secretName: {{ include "esgf.component.fullname" (list . "logstash-pipelines") }}
+        # As are any certificates that are required
+        - name: logstash-certs
+          secret:
+            secretName: {{ include "esgf.component.fullname" (list . "logstash-certs") }}
         # Logstash also needs a tmp dir and a data dir
         - name: logstash-data
           emptyDir: {}
         - name: logstash-tmp
           emptyDir: {}
+        {{- end }}
         {{- include "esgf.data.volumes" . | nindent 8 }}
         {{- with $thredds.extraVolumes }}
         {{- toYaml . | nindent 8 }}
