--- a/deploy/ansible/roles/data/tasks/logstash_install.yml
+++ b/deploy/ansible/roles/data/tasks/logstash_install.yml
@@ -4,15 +4,23 @@
   docker_network:
     name: esgf
 
-- name: Ensure logstash config directory exists
+- name: Ensure logstash config directories exist
   file:
-    path: /esg/config/logstash
+    path: /esg/config/logstash/{{ item }}
     state: directory
+  loop:
+    - certs
+    - pipelines
 
-- name: Install logstash configuration
+- name: Install certificate for stats server
+  copy:
+    content: "{{ logstash_stats_certificate }}"
+    dest: /esg/config/logstash/certs/lumberjack.cert
+
+- name: Install stats logstash configuration
   template:
-    src: access-log.conf.j2
-    dest: /esg/config/logstash/access-log.conf
+    src: stats.conf.j2
+    dest: /esg/config/logstash/pipelines/stats.conf
 
 # Configure logstash to follow the THREDDS and fileserver logs
 - name: Start logstash container
@@ -28,8 +36,10 @@
     user: "{{ data_security_context_user }}"
     groups: "{{ data_security_context_groups }}"
     volumes:
+      # Logstash certificates
+      - "/esg/config/logstash/certs:/etc/logstash/certs:ro"
       # Logstash configuration
-      - "/esg/config/logstash:/etc/logstash/conf.d:ro"
+      - "/esg/config/logstash/pipelines:/etc/logstash/conf.d:ro"
       # Log directory
       - "/esg/logs:/esg/logs:ro"
     state: started
