Added initial Ansible deployment for auth service

--- a/deploy/ansible/playbook.yml
+++ b/deploy/ansible/playbook.yml
@@ -8,6 +8,7 @@
   become: true
   roles:
     - docker
+    - auth
     - { name: data, tags: [data] }
     - { name: index, tags: [index] }
     - proxy
