Added initial Ansible deployment for IDP

--- a/deploy/ansible/playbook.yml
+++ b/deploy/ansible/playbook.yml
@@ -10,4 +10,5 @@
     - docker
     - { name: data, tags: [data] }
     - { name: index, tags: [index] }
+    - { name: idp, tags: [idp] }
     - proxy
