--- a/deploy/ansible/roles/index/tasks/main.yml
+++ b/deploy/ansible/roles/index/tasks/main.yml
@@ -14,6 +14,7 @@
 
 - name: Reconcile Solr replicas
   include: solr_replica_reconcile.yml
+  when: "'index' in group_names and solr_enabled"
 
 - name: Install search application
   include: search_install.yml
