Added realm import environment variable to IDP configmap

--- a/deploy/kubernetes/chart/templates/idp/configmap.yaml
+++ b/deploy/kubernetes/chart/templates/idp/configmap.yaml
@@ -7,4 +7,5 @@ metadata:
   labels: {{ include "esgf.component.labels" (list . "idp" $idp.labels) | nindent 4 }}
 data:
   PROXY_ADDRESS_FORWARDING: "true"
+  KEYCLOAK_IMPORT: "/opt/jboss/deploy/realm.json"
 {{- end }}
