--- a/deploy/kubernetes/chart/templates/idp/configmap.yaml
+++ b/deploy/kubernetes/chart/templates/idp/configmap.yaml
@@ -8,4 +8,7 @@ metadata:
 data:
   PROXY_ADDRESS_FORWARDING: "true"
   KEYCLOAK_IMPORT: "/opt/jboss/deploy/realm.json"
+  {{- if $idp.themeJarUrl }}
+  KEYCLOAK_THEME_JAR_URL: {{ $idp.themeJarUrl | b64enc | quote }}
+  {{- end }}
 {{- end }}
