--- a/deploy/kubernetes/chart/values.yaml
+++ b/deploy/kubernetes/chart/values.yaml
@@ -106,6 +106,37 @@ auth:
           scope: openid profile email
 
 ###
+# OPA server configuration
+###
+opa:
+  # Indicates if the OPA server should be deployed or not
+  enabled: true
+  # The number of replicas for the OPA server pod
+  # If an hpa is configured, this is ignored - the hpa has full control over the number of replicas
+  replicaCount: 1
+  # The horizontal pod autoscaler configuration for OPA server pods
+  # See https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/
+  # Configuration is the same as for the thredds pod
+  hpa: {}
+  # The resource allocations for the OPA server container
+  # See https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
+  resources: {}
+  # Extra environment variables for the OPA server container
+  # See https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
+  extraEnv: []
+  # Additional labels for OPA server resources
+  labels: {}
+  # The node selector for the OPA server pod
+  # See https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
+  nodeSelector:
+  # The affinity rules for the OPA server pod
+  # See https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
+  affinity:
+  # The tolerations for the OPA server pod
+  # See https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
+  tolerations:
+
+###
 # Data node configuration
 ###
 data:
