--- a/deploy/kubernetes/chart/templates/ingress/ingress.yaml
+++ b/deploy/kubernetes/chart/templates/ingress/ingress.yaml
@@ -3,9 +3,13 @@ kind: Ingress
 metadata:
   name: {{ include "esgf.component.fullname" (list . "ingress") }}
   labels: {{ include "esgf.component.labels" (list . "ingress" .Values.ingress.labels) | nindent 4 }}
-  {{- with .Values.ingress.annotations }}
-  annotations: {{ toYaml . | nindent 4 }}
-  {{- end }}
+  annotations:
+    # Auth service configuration
+    nginx.ingress.kubernetes.io/auth-url: "http://esgf-auth.default.svc.cluster.local:8080/verify/"
+    nginx.ingress.kubernetes.io/auth-signin: "https://$host:8443/login/"
+    {{- with .Values.ingress.annotations }}
+    {{ toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   tls:
     - hosts:
@@ -19,12 +23,6 @@ spec:
     - host: {{ .Values.hostname | quote }}
       http:
         paths:
-          {{- if .Values.auth.enabled }}
-          - path: /
-            backend:
-              serviceName: {{ include "esgf.component.fullname" (list . "auth") }}
-              servicePort: 8080
-          {{- end }}
           {{- if .Values.data.enabled }}
           {{- if .Values.data.thredds.enabled }}
           - path: /thredds
